Domibus 4.2
- Removed password column from borh Users and Plugin Users components/lists( as their values were obscured anyway)
- Added Parties functionality to External REST API calls
- Added new component/page in admin console to monitor test connections; integrated the former test component as details page
- Added domibus.monitoring.connection.party.enabled property which specifies the parties for which to monitor the connection (comma-separated list)
- Added domibus.monitoring.connection.cron property which specifies the frequency of test messages sent to monitor the C2-C3 connections
- Filtered out bean scanning of web and ext sub-packages to avoid multiple bean creation.
- Deleted msh-config.xml and moved one bean to spring-context.xml
- Upgrade Tomcat to version 9 and dropped support for Tomcat 8
- Upgrade Wildfly to version 18 and dropped support for Wildfly 12 (incompatibilities in the new Artemis 2.x client API)
- Upgrade MySQL to version 8.0 and dropped support for MySQL version 5
- Upgrade the default MySQL Connector/J bundled inside the full distributions to version 8.0.19
- When caching is active for MSH DispatchClient - Ehcache will ignore size calculations therefore no WARNs will be generated in logs
Domibus 4.1.4
- Added JMS message property 'finalRecipientType' in the JMS Plugin, which is required to send JMS message in Dynamic discovery for SMP lookup.
- Remove unnecessary jmx looping when looking up destination in weblogic jms manager
- Fixed the issue regarding duplicate retrieval of messages by multiple concurrent clients
Domibus 4.1.3
- Remove unnecessary RMI port usage from ActiveMQ on Tomcat
- Fixed payload encryption at start up of WebLogic cluster
- Fixed subject for certificate imminent expiration alert
- Fixed ListPendingMessages which returned messages in an intermediate state
- CXF Mtom/XOP request contain wrong encoded Content-ID HTTP header